# rapid_power_module

./: .gitignore  .~lock.BQ25756_DESIGN-CALC-V01X3.xlsx#  .~lock.pin assignment.xlsx#  BQ25756_DESIGN-CALC-V01X3.xlsx  BQ76905.kicad_sch  BQ7721609.kicad_sch  BQ77915.kicad_sch  RAPID_POWER_BOARD_falstad.txt  README.md  STM32F105RCT6.kicad_sym  V2.kicad_sch  balancer_cells.kicad_sch.kicad_sch  bq25820-SchLib.sch  bq25820.IntLib  bq25820.LibPkg  bq25820.PcbLib  charger.kicad_sch  control_logic.kicad_sch  fp-lib-table  frodo_power_module.kicad_prl  frodo_power_module.kicad_pro  frodo_power_module.kicad_sch  pin assignment.xlsx  rapid_power_module.kicad_pcb  rapid_power_module.kicad_prl  rapid_power_module.kicad_pro  rapid_power_module.kicad_sch  standalone_balancer.kicad_sch  sym-lib-table  sym-lib-table.bak  ~frodo_power_module.kicad_sch.lck  ~rapid_power_module.kicad_pcb.lck  ~rapid_power_module.kicad_sch.lck
AONS66614/: ALOM_DFN5X6_8L_EP1_P.kicad_mod
PB_old_routing/: rapid_power_module.kicad_pcb  ~rapid_power_module.kicad_pcb.lck
PB_rerouting_DO-NOT-REMOVE/: rapid_power_module.kicad_pcb
bq25750.pretty/: VQFN36_RRV_TEX-M.kicad_mod
bq25820.pretty/: RRV0036A-IPC_B.kicad_mod  RRV0036A-MFG.kicad_mod
bq76952.pretty/: QFP_2PFBR_TEX.kicad_mod
common/: 1043.kicad_sym  (+8 more)
firmware_v2/: Cargo.toml
firmware_v2/.cargo/: config.toml
firmware_v2/docs/: firmware_architecture.md
firmware_v2/src/: cypd3177.rs  main.rs  pins_up_down.rs
firmware_v2/src/bq25756/: device.rs  mod.rs  regs.rs  types.rs
firmware_v2/src/bq76952/: bq76952.rs  mod.rs  regs.rs  types.rs
(+79 files in other folders)
