[package]
name = "rapid_power_module_firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal = "1.0"
embedded-hal-async = "1.0"

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
alloc-cortex-m = "0.4"

embassy-stm32 = { version = "0.4.0", features = ["stm32f105rc", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.5.0", features = ["tick-hz-32_768"] }
embassy-embedded-hal = "0.5.0"
embassy-sync = "0.7.2"
embassy-futures = "0.1"

static_cell = "2"
crc = "3"

shared_types = { git = "https://github.com/tudsat-rocket/sam" }
embassy-usb = "0.5.1"
heapless = "0.9.1"
#shared_types = { path = "../../sam/shared_types" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = "full"
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 2
#opt-level = "s"
overflow-checks = false

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = "full"
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 2
overflow-checks = false

[features]
cypd-write = []